[tool.poetry]
name = "albion"
version = "0.1.0"
description = "Albion script. Trigger action on sound cue and/or enemy approaching"
authors = ["ozerioss"]

[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.52"
opencv-python = "^4.5.2"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
